--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 html, body {
   margin:0;
   padding:0;
+  min-width: 300px;
 }
 
 body {
